update the link

--- a/Bpayments_signin_popup.html
+++ b/Bpayments_signin_popup.html
@@ -27,7 +27,7 @@
       <label class="form-check-label" for="exampleCheck1">Check me out</label>
     </div>
     <button type="submit" class="btn btn-primary" id="submit_button">Submit</button>
-    <p>You don't have any account?<a href=" https://b-payments.herokuapp.com/">Sign up</a></p>
+    <p>You don't have any account?<a href=" https://b-payments.herokuapp.com">Sign up</a></p>
   </div>
   <script src="./Sign_in.js"></script>
 </body>
