add the api call for registration

--- a/Bpayments_signin_popup.html
+++ b/Bpayments_signin_popup.html
@@ -14,19 +14,13 @@
     <img src="./images/logo-BPAYMENTS.png" alt="">
   </div>
   <div class = "container" id="container">
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1">
-    </div>
-    <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary" id="submit_button">Submit</button>
+    <form class="form">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1">
+        <input type="submit" class="btn btn-primary" id="submit_button" value="Submit">
+    </form>
     <p>You don't have any account?<a href=" https://b-payments.herokuapp.com">Sign up</a></p>
   </div>
   <script src="./Sign_in.js"></script>
