--- a/Bpayments_signin_popup.html
+++ b/Bpayments_signin_popup.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class= "navbar">
-    <img src="./images/logo-BPAYMENTS.png" alt="">
+    <img src="./images/logo-BPAYMENTS_color.png" alt="">
   </div>
   <div class = "container" id="container">
     <form class="form">
