--- a/Bpayments_signin_popup.html
+++ b/Bpayments_signin_popup.html
@@ -21,9 +21,9 @@
         <input type="password" class="form-control" id="exampleInputPassword1">
         <input type="submit" class="btn btn-primary" id="submit_button" value="Submit">
     </form>
-    <p>You don't have any account?<a href=" https://b-payments.herokuapp.com">Sign up</a></p>
+    <p>You don't have any account?<a href="https://b-payments.herokuapp.com">Sign up</a></p>
   </div>
-  <script src="./Sign_in.js"></script>
+  <script src="./background.js"></script>
 </body>
 </html>
 
