--- a/Bpayments_signin_popup.html
+++ b/Bpayments_signin_popup.html
@@ -15,12 +15,14 @@
   </div>
   <div class = "container" id="container">
     <form class="form">
-        <label for="exampleInputEmail1">Email address</label>
+        <label for="exampleInputEmail1">Email</label>
         <input type="email" class="form-control" id="exampleInputEmail1">
         <label for="exampleInputPassword1">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1">
         <input type="submit" class="btn btn-primary" id="submit_button" value="Submit">
     </form>
+    <br>
+    <br>
     <p>You don't have any account?<a href="https://b-payments.herokuapp.com">Sign up</a></p>
   </div>
   <script src="./background.js"></script>
