--- a/Bpayments_popup.html
+++ b/Bpayments_popup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bpayments</title>
-  <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="./style/Transfer.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -14,12 +14,19 @@
     <img src="./images/logo-BPAYMENTS_color.png" alt="">
   </div>
   <div class = "container" id="container">
-    <div class="form-group">
-      <label for="amount">What is the amount you want to transfert ?</label>
-      <span><input class="form-control" id="amount" required maxlength="3"> €</span>
+    <div class="form">
+      <label for="amount">What amount do you want to transfer ?</label>
+      <div class ="d-flex">
+        <input class="form-control" id="amount" required maxlength="3">
+        <select class="custom-select" id="inlineFormCustomSelectPref">
+          <option value="1">€</option>
+          <option value="2">$</option>
+          <option value="3">£</option>
+        </select>
+      </div>
+      <button id="submit_button" class="btn">Sell my BTC</button>
     </div>
   </div>
   </div>
 </body>
 </html>
-
