--- a/Bpayments_signin_popup.html
+++ b/Bpayments_signin_popup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bpayments</title>
-  <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="./style/SignIn.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -23,9 +23,8 @@
     </form>
     <br>
     <br>
-    <p>You don't have any account?<a href="https://b-payments.herokuapp.com">Sign up</a></p>
+    <p>You don't have any account?<a href="https://b-payments.herokuapp.com"> Sign up</a></p>
   </div>
   <script src="./background.js"></script>
 </body>
 </html>
-
