add the balance account to the amount demand page

--- a/Bpayments_popup.html
+++ b/Bpayments_popup.html
@@ -13,6 +13,7 @@
   <div class= "navbar">
     <img src="./images/logo-BPAYMENTS_color.png" alt="">
   </div>
+  <p class="eur-balance"></p>
   <div class = "container" id="container">
     <div class="form">
       <label for="amount">What amount do you want to transfer ?</label>
@@ -28,6 +29,6 @@
     </div>
   </div>
   </div>
-  <script source="./balance.js"></script>
+  <script src="./balance.js"></script>
 </body>
 </html>
