--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bpayments</title>
-  <link rel="stylesheet" href="./style/transfer.css">
+  <link rel="stylesheet" href="../style/get_amount.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
   <div class= "navbar">
-    <img src="./images/logo-BPAYMENTS_color.png" alt="">
+    <img src="../images/logo-BPAYMENTS_color.png" alt="">
   </div>
   <p class="eur-balance"></p>
   <div class = "container" id="container">
@@ -25,10 +25,10 @@
           <option value="3">£</option>
         </select>
       </div>
-      <button id="submit_button" class="btn">Sell my BTC</button>
+      <button id="submit_button" class="btn">Submit</button>
     </div>
   </div>
   </div>
-  <script src="./balance.js"></script>
+  <script src="../javascript/get_amount.js"></script>
 </body>
 </html>
