--- a/popups/sign_in.html
+++ b/popups/sign_in.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bpayments</title>
-  <link rel="stylesheet" href="./style/sign_in.css">
+  <link rel="stylesheet" href="../style/sign_in.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
   <div class= "navbar">
-    <img src="./images/logo-BPAYMENTS_color.png" alt="">
+    <img src="../images/logo-BPAYMENTS_color.png" alt="">
   </div>
   <div class = "container" id="container">
     <form class="form">
@@ -25,6 +25,6 @@
     <br>
     <p>You don't have any account?<a href="https://b-payments.herokuapp.com"> Sign up</a></p>
   </div>
-  <script src="./background.js"></script>
+  <script src="../javascript/sign_in.js"></script>
 </body>
 </html>
