--- a/popups/sell_and_withdraw.html
+++ b/popups/sell_and_withdraw.html
@@ -10,13 +10,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-  <div class= "navbar">
+  <div class="navbar">
     <img src="../images/logo-BPAYMENTS_color.png" alt="">
   </div>
-  <p class="eur-balance"></p>
+  <p class="message"></p>
   <div class = "container" id="container">
-    <button id="submit_button" class="btn">Submit</button>
+    <button id="sell" class="btn black-btn">Submit</button>
   </div>
-  <script src="../javascript/sell_and_transfer.js"></script>
+  <script src="../javascript/sell_and_withdraw.js"></script>
 </body>
 </html>
