--- a/popups/sign_in.html
+++ b/popups/sign_in.html
@@ -19,7 +19,7 @@
         <input type="email" class="form-control" id="exampleInputEmail1">
         <label for="exampleInputPassword1">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1">
-        <input type="submit" class="btn btn-primary" id="submit_button" value="Sign In">
+        <input type="submit" class=" black-btn" id="submit_button" value="Sign In">
     </form>
     <br>
     <br>
