--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -14,6 +14,7 @@
     <img src="../images/logo-BPAYMENTS_color.png" alt="">
   </div>
   <p class="eur-balance"></p>
+  <p class="btc-balance"></p>
   <div class = "container" id="container">
     <div class="form">
       <label for="amount">What amount do you want to transfer ?</label>
