--- a/popups/sign_in.html
+++ b/popups/sign_in.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bpayments</title>
-  <link rel="stylesheet" href="../style/sign_in.css">
+  <link rel="stylesheet" href="../style/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -19,7 +19,7 @@
         <input type="email" class="form-control" id="exampleInputEmail1">
         <label for="exampleInputPassword1">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1">
-        <input type="submit" class=" black-btn" id="submit_button" value="Sign In">
+        <input type="submit" class="black-btn" id="submit_button" value="Sign In">
     </form>
     <br>
     <br>
