--- a/popups/sign_in.html
+++ b/popups/sign_in.html
@@ -11,9 +11,9 @@
 </head>
 <body>
   <div class= "navbar">
-    <img src="../images/logo-BPAYMENTS_color.png" alt="">
+    <img src="../images/logo-black.svg" alt="">
   </div>
-  <div class = "container" id="container">
+  <div class="container">
     <form class="form">
         <label for="exampleInputEmail1">Email</label>
         <input type="email" class="form-control" id="exampleInputEmail1">
@@ -23,7 +23,7 @@
     </form>
     <br>
     <br>
-    <p>You don't have any account?<a href="https://b-payments.herokuapp.com"> Sign up</a></p>
+    <p>You don't have an account yet?<a href="https://b-payments.herokuapp.com"> Sign up!</a></p>
   </div>
   <script src="../javascript/sign_in.js"></script>
 </body>
