add the last popup

--- a/popups/transfer_done.html
+++ b/popups/transfer_done.html
@@ -14,17 +14,9 @@
     <img src="../images/logo-BPAYMENTS_color.png" alt="">
   </div>
   <div class = "container">
-    <form class="form">
-        <label for="exampleInputEmail1">Email</label>
-        <input type="email" class="form-control" id="exampleInputEmail1">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
-        <input type="submit" class="black-btn" id="submit_button" value="Sign In">
-    </form>
-    <br>
-    <br>
-    <p>You don't have an account?<a href="https://b-payments.herokuapp.com"> Sign up</a></p>
+    <h5> You can now pay with Paypal</h5>
+    <img src="../images/valid-sign.svg" class ="validation">
   </div>
-  <script src="../javascript/sign_in.js"></script>
 </body>
 </html>
+
