--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -7,27 +7,43 @@
   <link rel="stylesheet" href="../style/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
   <div class= "navbar">
     <img src="../images/logo-BPAYMENTS_color.png" alt="">
   </div>
-  <p class="eur-balance"></p>
-  <p class="btc-balance"></p>
-  <div class = "container" id="container">
-    <div class="form">
-      <label for="amount">What amount do you want to transfer ?</label>
-      <div class ="d-flex">
-        <input class="form-control" id="amount">
-        <select class="custom-select" id="inlineFormCustomSelectPref">
-          <option value="1">€</option>
-          <option value="2">$</option>
-          <option value="3">£</option>
-        </select>
+  <div class = "container">
+    <div>
+      <div class="card border-dark mb-3">
+        <div class="card-body text-dark d-flex flex-column">
+        <h5 class="card-title eur-balance"></h5>
+        <p class="card-text eur-balance-currency"></p>
+        </div>
+        </div>
+      <div class="card border-dark mb-3">
+        <div class="card-body text-dark d-flex flex-column">
+        <h5 class="card-title btc-balance"></h5>
+        <p class="card-text btc-balance-currency"></p>
+        </div>
       </div>
-      <button id="submit_button" class="black-btn">Submit</button>
+      <strong><h3 class="eur-balance"></h3></strong>
+      <strong><h3 class="btc-balance"></h3></strong>
     </div>
+      <div class="form pt-4">
+        <label for="amount">Transfer for :</label>
+        <div class ="d-flex">
+          <input class="form-control" id="amount">
+          <select class="custom-select" id="inlineFormCustomSelectPref">
+            <option value="1">€</option>
+            <option value="2">$</option>
+            <option value="3">£</option>
+          </select>
+        </div>
+        <button id="submit_button" class="black-btn">Submit</button>
+      </div>
   </div>
   </div>
   <script src="../javascript/get_amount.js"></script>
