--- a/popups/sign_in.html
+++ b/popups/sign_in.html
@@ -13,7 +13,7 @@
   <div class= "navbar">
     <img src="../images/logo-black.svg" alt="">
   </div>
-  <div class="container">
+  <div class="container justify-content-center">
     <form class="form">
         <label for="exampleInputEmail1">Email</label>
         <input type="email" class="form-control" id="exampleInputEmail1">
