--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
 </head>
 <body>
   <div class= "navbar">
@@ -16,18 +17,21 @@
   <div class = "container justify-content-center">
     <div class="d-flex justify-content-between">
       <div class="account-card">
-        <svg>
-          <circle  cx="75" cy="75" r="60"  fill="none" width="100%" height="100%"/>
+        <svg class="">
+          <circle  class="" cx="75" cy="75" r="60"  fill="none" width="100%" height="100%"/>
         </svg>
-        <p class="balance eur-balance"> </p><span>€</span>
+        <div class="d-flex flex-column text-center">
+          <p class="balance eur-balance"></p>
+          <span><i class="fas fa-euro-sign"></i></span>
+        </div>
       </div>
       <div class="account-card">
-        <svg>
-          <circle  cx="75" cy="75" r="60"  fill="none" width="100%" height="100%"/>
+        <svg class="">
+          <circle class="" cx="75" cy="75" r="60"  fill="none" width="100%" height="100%"/>
         </svg>
         <div class="d-flex flex-column text-center">
           <p class="balance btc-balance"></p>
-          <span>BTC</span>
+          <span><i class="fab fa-btc"></i></span>
         </div>
       </div>
     </div>
