--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -6,7 +6,7 @@
   <title>Bpayments</title>
   <link rel="stylesheet" href="../style/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700&family=Red+Hat+Text&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
 </head>
@@ -15,6 +15,7 @@
     <img src="../images/logo-black.svg" alt="">
   </div>
   <div class = "container justify-content-center">
+    <h5>BALANCES</h5>
     <div class="d-flex justify-content-between">
       <div class="account-card">
         <svg class="">
@@ -22,7 +23,7 @@
         </svg>
         <div class="d-flex flex-column text-center">
           <p class="balance eur-balance"></p>
-          <span><i class="fas fa-euro-sign"></i></span>
+          <span id="euro-span"></span>
         </div>
       </div>
       <div class="account-card">
@@ -31,12 +32,16 @@
         </svg>
         <div class="d-flex flex-column text-center">
           <p class="balance btc-balance"></p>
-          <span><i class="fab fa-btc"></i></span>
+          <span id="btc-span"></span>
+          <div class="d-flex justify-content-center" id="little-euro">
+            <span id="btc-euro-span"></span>
+            <span id="little-euro-span"></span>
+          </div>
         </div>
       </div>
     </div>
     <div class="form">
-      <label for="amount">What amount do you want to transfer ?</label>
+      <label for="amount">Seems like you need this amount, change it if we're wrong!</label>
       <div class ="d-flex">
         <input class="form-control" id="amount">
         <select class="custom-select" id="inlineFormCustomSelectPref">
