--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div class="form">
-      <label for="amount">Seems like you need this amount, change it if we're wrong!</label>
+      <p>Seems like you need this amount, change it if we're wrong!</p>
       <div class ="d-flex">
         <input class="form-control" id="amount">
         <select class="custom-select" id="inlineFormCustomSelectPref">
