target blank to open tab

--- a/popups/sign_in.html
+++ b/popups/sign_in.html
@@ -23,7 +23,7 @@
     </form>
     <br>
     <br>
-    <p>You don't have an account yet?<a href="https://b-payments.herokuapp.com"> Sign up!</a></p>
+    <p>You don't have an account yet?<a href="https://www.b-payments.cash/" target="_blank"> Sign up!</a></p>
   </div>
   <script src="../javascript/sign_in.js"></script>
 </body>
