--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -40,8 +40,8 @@
         </div>
       </div>
     </div>
+    <p class="text-center">Seems like you need this amount, change it if we're wrong!</p>
     <div class="form">
-      <p>Seems like you need this amount, change it if we're wrong!</p>
       <div class ="d-flex">
         <input class="form-control" id="amount">
         <select class="custom-select" id="inlineFormCustomSelectPref">
