--- a/popups/sell_and_withdraw.html
+++ b/popups/sell_and_withdraw.html
@@ -6,21 +6,50 @@
   <title>Bpayments</title>
   <link rel="stylesheet" href="../style/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700&family=Red+Hat+Text&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
 </head>
 <body>
   <div class="navbar">
     <img src="../images/logo-black.svg" alt="">
   </div>
   <div class = "container">
-    <div id="loader-2">
+    <!-- <div id="loader-2">
       <span></span>
       <span></span>
       <span></span>
+    </div> -->
+    <div class="steps d-flex">
+      <p>Selling <span id="bitcoin-sold"></span><i class="fab fa-btc"></i></p>
+      <div class="little-circle-card">
+        <svg class="little-circle">
+          <circle cx="40" cy="40" r="20"  fill="none" width="100%" height="100%"/>
+        </svg>
+        <p>1</p>
+      </div>
     </div>
-    <p>Selling <span id="btc_amount_sold"></span> BTC in order to transfer <span id="price"></span> € to your Paypal account</p>
-    <button id="sell" class="black-btn">Proceed</button>
+    <div class="steps d-flex">
+      <p>Transferring <span id="price"></span> <i class="fas fa-euro-sign"></i></p>
+      <div class="little-circle-card">
+        <svg class="little-circle">
+          <circle cx="40" cy="40" r="20"  fill="none" width="100%" height="100%"/>
+        </svg>
+        <p>2</p>
+      </div>
+    </div>
+    <div class="steps d-flex">
+      <p>Ready to pay with <i class="fab fa-paypal"></i></p>
+      <div class="little-circle-card">
+        <svg class="little-circle">
+          <circle cx="40" cy="40" r="20"  fill="none" width="100%" height="100%"/>
+        </svg>
+        <p>3</p>
+      </div>
+    </div>
+    <button id="sell" class="black-btn">Let's go!</button>
+    </div>
+    <!-- <p>Selling <span id="btc_amount_sold"></span> BTC in order to transfer <span id="price"></span> € to your Paypal account</p> -->
   </div>
   <script src="../javascript/sell_and_withdraw.js"></script>
 </body>
