--- a/popups/transfer_only.html
+++ b/popups/transfer_only.html
@@ -48,7 +48,7 @@
       </div>
     </div>
     <!-- <p>Selling <span id="btc_amount_sold"></span> BTC in order to transfer <span id="price"></span> € to your Paypal account</p> -->
-    <button id="sell" class="black-btn">Let's go!</button>
+    <button id="transfer" class="black-btn">Let's go!</button>
   </div>
   <script src="../javascript/sell_and_withdraw.js"></script>
 </body>
