some more changes

--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -15,6 +15,7 @@
     <img src="../images/logo-black.svg" alt="">
   </div>
   <div class = "container justify-content-center">
+    <h5>Your wallets</h5>
     <div class="d-flex justify-content-between">
       <div class="account-card">
         <svg class="">
