--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -25,12 +25,7 @@
           <p class="balance btc-balance"></p>
           <span id="btc-span"></span>
         </div>
-      </div>
-      <div class="account-card">
-        <svg class="">
-          <circle class="" cx="75" cy="75" r="60"  fill="none" width="100%" height="100%"/>
-        </svg>
-        <div class="d-flex text-center">
+        <div class="eur-convert d-flex text-center">
           <p class="balance btc-in-eur-balance"></p>
           <span id="euro-span"></span>
         </div>
@@ -46,7 +41,12 @@
           <option value="3">£</option>
         </select>
       </div>
-      <button id="submit_button" class="black-btn">Submit</button>
+      <div class="rate d-flex text-center">
+        <span id="egal-sign">=</span>
+        <p class="convert price-in-btc-balance"></p>
+        <span id="btc-span-small"><i class="fab fa-btc"></i></span>
+      </div>
+      <button id="submit_button" class="black-btn">Confirm Price</button>
     </div>
   </div>
   </div>
