--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -15,17 +15,22 @@
     <img src="../images/logo-black.svg" alt="">
   </div>
   <div class = "container justify-content-center">
-    <h5>Your wallets</h5>
+    <h5><i class="fab fa-btc"></i><span id="header-span">  WALLET</span></h5>
     <div class="d-flex justify-content-between">
       <div class="account-card">
         <svg class="">
-          <circle  class="" cx="75" cy="75" r="60"  fill="none" width="100%" height="100%"/>
+          <circle  class="" cx="60" cy="60" r="52"  fill="none" width="100%" height="100%"/>
         </svg>
         <div class="d-flex text-center">
           <p class="balance btc-balance"></p>
           <span id="btc-span"></span>
         </div>
-        <div class="eur-convert d-flex text-center">
+      </div>
+      <div class="account-card">
+        <svg class="">
+          <circle class="" cx="60" cy="60" r="52"  fill="none" width="100%" height="100%"/>
+        </svg>
+        <div class="d-flex text-center">
           <p class="balance btc-in-eur-balance"></p>
           <span id="euro-span"></span>
         </div>
