fini avec cette putain de popup

--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -15,8 +15,8 @@
     <img src="../images/logo-black.svg" alt="">
   </div>
   <div class = "container justify-content-center">
-    <h5><i class="fab fa-btc"></i><span id="header-span">  WALLET</span></h5>
-    <div class="d-flex justify-content-between">
+    <h5><span id="header-span">  Wallet</span></h5>
+    <div class="d-flex justify-content-around align-items-center">
       <div class="account-card">
         <svg class="">
           <circle  class="" cx="60" cy="60" r="52"  fill="none" width="100%" height="100%"/>
@@ -26,6 +26,7 @@
           <span id="btc-span"></span>
         </div>
       </div>
+      <span id="egal-sign-circle">=</span>
       <div class="account-card">
         <svg class="">
           <circle class="" cx="60" cy="60" r="52"  fill="none" width="100%" height="100%"/>
