insert a online balance of price

--- a/popups/sell_and_withdraw.html
+++ b/popups/sell_and_withdraw.html
@@ -15,11 +15,6 @@
     <img src="../images/logo-black.svg" alt="">
   </div>
   <div class = "container">
-    <!-- <div id="loader-2">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div> -->
     <div class="steps d-flex">
       <p>Selling <span id="bitcoin-sold"></span><i class="fab fa-btc"></i></p>
       <div class="little-circle-card">
@@ -47,7 +42,11 @@
         <p>3</p>
       </div>
     </div>
-    <button id="sell" class="black-btn">Let's go!</button>
+    <div id="loader-2">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     </div>
     <!-- <p>Selling <span id="btc_amount_sold"></span> BTC in order to transfer <span id="price"></span> € to your Paypal account</p> -->
   </div>
