--- a/popups/sell_and_withdraw.html
+++ b/popups/sell_and_withdraw.html
@@ -15,32 +15,34 @@
     <img src="../images/logo-black.svg" alt="">
   </div>
   <div class = "container">
-    <div class="steps d-flex">
-      <p>Selling <span id="bitcoin-sold"></span><i class="fab fa-btc"></i></p>
+    <div class="steps one d-flex">
+      <span id="bitcoin-sold" class="pr-1 value"></span>
+<!--       <p>Selling <span id="bitcoin-sold"></span><i class="fab fa-btc"></i></p>
       <div class="little-circle-card">
         <svg class="little-circle">
           <circle cx="40" cy="40" r="20"  fill="none" width="100%" height="100%"/>
         </svg>
         <p>1</p>
-      </div>
+      </div> -->
     </div>
-    <div class="steps d-flex">
-      <p>Transferring <span id="price"></span> <i class="fas fa-euro-sign"></i></p>
+    <div class="steps two d-flex">
+      <span id="price" class="pr-1 value"></span>
+      <!-- <p>Transferring  <i class="fas fa-euro-sign"></i></p>
       <div class="little-circle-card">
         <svg class="little-circle">
           <circle cx="40" cy="40" r="20"  fill="none" width="100%" height="100%"/>
-        </svg>
-        <p>2</p>
-      </div>
+        </svg> -->
+<!--         <p>2</p>
+      </div> -->
     </div>
-    <div class="steps d-flex">
-      <p>Ready to pay with <i class="fab fa-paypal"></i></p>
+    <div class="steps three d-flex">
+      <!-- <p>Ready to pay with <i class="fab fa-paypal"></i></p>
       <div class="little-circle-card">
         <svg class="little-circle">
           <circle cx="40" cy="40" r="20"  fill="none" width="100%" height="100%"/>
         </svg>
         <p>3</p>
-      </div>
+      </div> -->
     </div>
     <div id="loader-2">
       <span></span>
