--- a/popups/payment.html
+++ b/popups/payment.html
@@ -52,6 +52,6 @@
     </div>
     <!-- <p>Selling <span id="btc_amount_sold"></span> BTC in order to transfer <span id="price"></span> € to your Paypal account</p> -->
   </div>
-  <script src="../javascript/sell_and_withdraw.js"></script>
+  <script src="../javascript/payment.js"></script>
 </body>
 </html>
