add the link to the dashboard

--- a/popups/payment.html
+++ b/popups/payment.html
@@ -11,8 +11,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
 </head>
 <body>
-  <div class="navbar">
+  <div class="navbar align-items-between">
     <img src="../images/logo-black.svg" alt="">
+    <a href="https://b-payments.herokuapp.com/dashboard" class="dashboard">Dashboard</a>
   </div>
   <div class = "container">
     <div class="steps one d-flex">
