--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -11,8 +11,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
 </head>
 <body>
-  <div class= "navbar">
+  <div class= "navbar d-flex align-items-between">
     <img src="../images/logo-black.svg" alt="">
+    <a href="https://b-payments.herokuapp.com/dashboard" class="dashboard">Dashboard</a>
   </div>
   <div class = "container justify-content-center">
     <h5><span id="header-span">  Wallet</span></h5>
