--- a/popups/payment.html
+++ b/popups/payment.html
@@ -13,7 +13,7 @@
 <body>
   <div class="navbar align-items-between">
     <img src="../images/logo-black.svg" alt="">
-    <a href="https://b-payments.herokuapp.com/dashboard" class="dashboard">Dashboard</a>
+    <a href="https://b-payments.herokuapp.com/dashboard" class="dashboard" target="_blank">Dashboard</a>
   </div>
   <div class = "container">
     <div class="steps one d-flex">
