update CTA in get-payments

--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -53,7 +53,7 @@
         <p class="convert price-in-btc-balance"></p>
         <span id="btc-span-small"><i class="fab fa-btc"></i></span>
       </div>
-      <button id="submit_button" class="black-btn">Sell my bitcoin</button>
+      <button id="submit_button" class="black-btn">Sell Bitcoins</button>
     </div>
   </div>
   </div>
