--- a/popups/payment.html
+++ b/popups/payment.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
 </head>
 <body>
-  <div class="navbar align-items-between">
+  <div class="navbar justify-content-between">
     <img src="../images/logo-black.svg" alt="">
     <a href="https://b-payments.herokuapp.com/dashboard" class="dashboard">Dashboard</a>
   </div>
