change redirect link from herokuapp.com to .cash

--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -13,7 +13,7 @@
 <body>
   <div class= "navbar d-flex justify-content-between">
     <img src="../images/logo-black.svg" alt="">
-    <a href="https://b-payments.herokuapp.com/dashboard" class="dashboard" target="_blank">Dashboard</a>
+    <a href="https://www.b-payments.cash/dashboard" class="dashboard" target="_blank">Dashboard</a>
   </div>
   <div class = "container justify-content-center">
     <h5><span id="header-span">Wallet</span></h5>
