add  the sign out button

--- a/popups/get_amount.html
+++ b/popups/get_amount.html
@@ -51,7 +51,9 @@
       </div>
       <button id="submit_button" class="black-btn">Sell Bitcoins</button>
     </div>
-  </div>
+    <div class="d-flex w-100 justify-content-end">
+      <a class="signout">Sign out</a>
+    </div>
   </div>
   <script src="../javascript/get_amount.js"></script>
 </body>
