--- a/popups/payment.html
+++ b/popups/payment.html
@@ -18,40 +18,20 @@
   <div class = "container">
     <div class="steps one d-flex">
       <span id="bitcoin-sold" class="pr-1 value"></span>
-<!--       <p>Selling <span id="bitcoin-sold"></span><i class="fab fa-btc"></i></p>
-      <div class="little-circle-card">
-        <svg class="little-circle">
-          <circle cx="40" cy="40" r="20"  fill="none" width="100%" height="100%"/>
-        </svg>
-        <p>1</p>
-      </div> -->
     </div>
     <div class="steps two d-flex">
       <span id="price" class="pr-1 value"></span>
-      <!-- <p>Transferring  <i class="fas fa-euro-sign"></i></p>
-      <div class="little-circle-card">
-        <svg class="little-circle">
-          <circle cx="40" cy="40" r="20"  fill="none" width="100%" height="100%"/>
-        </svg> -->
-<!--         <p>2</p>
-      </div> -->
     </div>
     <div class="steps three d-flex">
-      <!-- <p>Ready to pay with <i class="fab fa-paypal"></i></p>
-      <div class="little-circle-card">
-        <svg class="little-circle">
-          <circle cx="40" cy="40" r="20"  fill="none" width="100%" height="100%"/>
-        </svg>
-        <p>3</p>
-      </div> -->
     </div>
     <div id="loader-2">
       <span></span>
       <span></span>
       <span></span>
     </div>
+    <div class="d-flex w-100 justify-content-end">
+      <a class="signout">Sign out</a>
     </div>
-    <!-- <p>Selling <span id="btc_amount_sold"></span> BTC in order to transfer <span id="price"></span> € to your Paypal account</p> -->
   </div>
   <script src="../javascript/payment.js"></script>
 </body>
